Adds whitepaper and link to it
Adds a comprehensive whitepaper detailing RecToken's vision, technology,
market analysis, and financial projections.

Links the whitepaper from the main landing page and the footer for easy access.
The whitepaper provides in-depth information to potential investors and users.

--- a/index.html
+++ b/index.html
@@ -1074,11 +1074,12 @@
         </p>
 
         <div class="flex flex-col sm:flex-row gap-4 justify-center mb-8">
-          <button
-            class="bg-white text-primary px-8 py-4 rounded-lg text-lg font-semibold hover:bg-gray-100 transition-all transform hover:scale-105 shadow-lg"
+          <a
+            href="whitepaper.html"
+            class="bg-white text-primary px-8 py-4 rounded-lg text-lg font-semibold hover:bg-gray-100 transition-all transform hover:scale-105 shadow-lg text-center"
           >
             🚀 Acessar Whitepaper Técnico
-          </button>
+          </a>
           <button
             class="border-2 border-white text-white px-8 py-4 rounded-lg text-lg font-semibold hover:bg-white hover:text-primary transition-all"
           >
@@ -1238,7 +1239,9 @@
                 <a href="#" class="hover:text-white transition-colors">Blog</a>
               </li>
               <li>
-                <a href="#" class="hover:text-white transition-colors"
+                <a
+                  href="whitepaper.html"
+                  class="hover:text-white transition-colors"
                   >Whitepaper</a
                 >
               </li>
